policies/drop-all-capabilities.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: drop-all-capabilities
spec:
  validationFailureAction: Enforce
  rules:
    - name: require-drop-all
      match:
        any:
          - resources:
              kinds:
                - Pod
                - Deployment
                - StatefulSet
                - DaemonSet
                - Job
                - CronJob
      exclude:
        resources:
          namespaces:
            - kube-system
            - flux-system
            - kyverno
      validate:
        message: "Containers must drop ALL capabilities. Only NET_BIND_SERVICE may be added."
        foreach:
          - list: "request.object.spec.[containers, initContainers, ephemeralContainers][]"
            deny:
              conditions:
                all:
                  - key: "ALL"
                    operator: AnyNotIn
                    value: "{{ element.securityContext.capabilities.drop || [] }}"
    - name: restrict-added-capabilities
      match:
        any:
          - resources:
              kinds:
                - Pod
                - Deployment
                - StatefulSet
                - DaemonSet
                - Job
                - CronJob
      exclude:
        resources:
          namespaces:
            - kube-system
            - flux-system
            - kyverno
      validate:
        message: "Only NET_BIND_SERVICE may be added as a capability."
        foreach:
          - list: "request.object.spec.[containers, initContainers, ephemeralContainers][]"
            deny:
              conditions:
                any:
                  - key: "{{ element.securityContext.capabilities.add || [] }}"
                    operator: AnyNotIn
                    value:
                      - NET_BIND_SERVICE
