policies/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
spec:
  validationFailureAction: Enforce
  rules:
    - name: run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
                - Deployment
                - StatefulSet
                - DaemonSet
                - Job
                - CronJob
      exclude:
        resources:
          namespaces:
            - kube-system
            - flux-system
            - kyverno
      validate:
        message: "Containers must run as non-root"
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
            containers:
              - securityContext:
                  allowPrivilegeEscalation: "false"
                  capabilities:
                    drop:
                      - "ALL"
            =(initContainers):
              - securityContext:
                  allowPrivilegeEscalation: "false"
                  capabilities:
                    drop:
                      - "ALL"
            =(ephemeralContainers):
              - securityContext:
                  allowPrivilegeEscalation: "false"
                  capabilities:
                    drop:
                      - "ALL"
